force-app/main/default/objects/Tournament_Sport__c/fields/Date_of_Game__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Game__c</fullName>
    <label>Date of Game</label>
    <type>Date</type>
</CustomField>