force-app/main/default/objects/Tournament_Sport__c/fields/Sport__c.field-meta.xml
<CustomField>
    <fullName>Sport__c</fullName>
    <label>Sport</label>
    <referenceTo>Sport__c</referenceTo>
    <relationshipLabel>Tournament Sports</relationshipLabel>
    <relationshipName>Tournament_Sports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>